--- a/.htaccess
+++ b/.htaccess
@@ -2,10 +2,13 @@
 RewriteEngine On
 RewriteBase /
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^.]+)$ $1.php [NC,L]
+RewriteRule ^([^.]+)$ $1.html [NC,L]
+
+RewriteCond %{THE_REQUEST} /([^.]+)\.php [NC]
+RewriteRule ^ /%1 [NC,L,R]
 
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
-
-RewriteRule ^(.*)\.html $1.php [R=301,L]
-#RewriteRule ^(.*)\.php $1.html
-
+RewriteRule ^ %{REQUEST_URI}.php [NC,L]
+#RewriteRule ^ %{REQUEST_URI}.html [NC,L]
